Closed
Bug 645645
Opened 14 years ago
Closed 14 years ago
TI+JM: Assertion failure: f.fp()->hasCallObj() || f.fp()->hasArgsObj(), at ../methodjit/InvokeHelpers.cpp:539
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: jandem, Unassigned)
References
Details
--
function f() {
f = Math.x;
}
f();
--
$ ./js -a -n -m test.js
Assertion failure: f.fp()->hasCallObj() || f.fp()->hasArgsObj(), at ../methodjit/InvokeHelpers.cpp:539
Comment 1•14 years ago
|
||
We did not check script->fun->isHeavyweight() when deciding to inline a call (the usesEval and usesArguments checks were not sufficient).
http://hg.mozilla.org/projects/jaegermonkey/rev/85c24589029c
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•