[INFER] Check for heavyweight functions when deciding to inline, bug 645645.